--- a/src/app/starships/starships.component.html
+++ b/src/app/starships/starships.component.html
@@ -3,14 +3,16 @@
 <div class="row">
     <ng-container *ngFor="let s of starships; let i = index">
         <div class="col"><div >
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" [src]="s.img_url" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{s.name}}</h5>
-                  <p class="card-text">{{s.model}}</p>
-                  <a href="#" class="btn btn-primary">details</a>
+            <a [routerLink]="[s.id]">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" [src]="s.img_url" alt="Card image cap">
+                    <div class="card-body starwarsbACKGROUD">
+                        <h5 class="card-title starwarsText">{{s.name}}</h5>
+                        <p class="card-text starwarsText">{{s.model}}</p>
+                        <h6 class="card-text starwarsText">details</h6>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div></div>
         <div *ngIf="(i+1) % 3 === 0" class="w-100"></div>
     </ng-container>
