--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
 
 
 body {padding-top: 80px;}
+.starwarsText{
+    color: #FFE81F;
+	text-align: center;
+	font-style: italic;
+}
+
+.starwarsbACKGROUD {
+    background-color:gray;
+}
+
+.card{
+    margin-bottom: 30px;
+}
